bfd/coff-rs6000.c
@@ -3205,10 +3205,12 @@ xcoff_reloc_type_tls (bfd *input_bfd ATTRIBUTE_UNUSED,
   /* FIXME: h is sometimes null, if the TLS symbol is not exported.  */
   if (!h)
     {
+      char vaddr_buf[128];
+
+      sprintf_vma (vaddr_buf, rel->r_vaddr);
       _bfd_error_handler
-	(_("%pB: TLS relocation at (0x%" BFD_VMA_FMT "x) over "
-	   "internal symbols (C_HIDEXT) not yet possible\n"),
-	 input_bfd, rel->r_vaddr);
+	(_("%pB: TLS relocation at 0x%s over internal symbols (C_HIDEXT) not yet possible\n"),
+	 input_bfd, vaddr_buf);
       return false;
     }
 
@@ -3216,10 +3218,12 @@ xcoff_reloc_type_tls (bfd *input_bfd ATTRIBUTE_UNUSED,
   /* TLS relocations must target a TLS symbol.  */
   if (h->smclas != XMC_TL && h->smclas != XMC_UL)
     {
+      char vaddr_buf[128];
+
+      sprintf_vma (vaddr_buf, rel->r_vaddr);
       _bfd_error_handler
-	(_("%pB: TLS relocation at (0x%" BFD_VMA_FMT "x) over "
-	   "non-TLS symbol %s (0x%x)\n"),
-	 input_bfd, rel->r_vaddr, h->root.root.string, h->smclas);
+	(_("%pB: TLS relocation at 0x%s over non-TLS symbol %s (0x%x)\n"),
+	 input_bfd, vaddr_buf, h->root.root.string, h->smclas);
       return false;
     }
 
@@ -3230,10 +3234,12 @@ xcoff_reloc_type_tls (bfd *input_bfd ATTRIBUTE_UNUSED,
        && (h->flags & XCOFF_DEF_DYNAMIC) != 0)
 	  || (h->flags & XCOFF_IMPORT) != 0))
     {
+      char vaddr_buf[128];
+
+      sprintf_vma (vaddr_buf, rel->r_vaddr);
       _bfd_error_handler
-	(_("%pB: TLS local relocation at (0x%" BFD_VMA_FMT "x) over "
-	   "imported symbol %s\n"),
-	 input_bfd, rel->r_vaddr, h->root.root.string);
+	(_("%pB: TLS local relocation at 0x%s over imported symbol %s\n"),
+	 input_bfd, vaddr_buf, h->root.root.string);
       return false;
     }
 
@@ -3638,11 +3644,15 @@ xcoff_ppc_relocate_section (bfd *output_bfd,
 	      break;
 
 	    default:
-	      _bfd_error_handler
-		(_("%pB: relocation (%d) at (0x%" BFD_VMA_FMT "x) has wrong"
-		   " r_rsize (0x%x)\n"),
-		 input_bfd, rel->r_type, rel->r_vaddr, rel->r_size);
-	      return false;
+	      {
+		char vaddr_buf[128];
+
+		sprintf_vma (vaddr_buf, rel->r_vaddr);
+		_bfd_error_handler
+		  (_("%pB: relocation (%d) at 0x%s has wrong r_rsize (0x%x)\n"),
+		   input_bfd, rel->r_type, vaddr_buf, rel->r_size);
+		return false;
+	      }
 	    }
 	}
 
