bfd/cofflink.c
@@ -2606,10 +2606,14 @@ _bfd_coff_write_global_sym (struct bfd_hash_entry *bh, void *data)
 	if (isym.n_value > (bfd_vma) 0xffffffff)
 	  {
 	    if (! h->root.linker_def)
-	      _bfd_error_handler
-	        (_("%pB: stripping non-representable symbol '%s' (value "
-                  "%" BFD_VMA_FMT "x)"),
-	         output_bfd, h->root.root.string, isym.n_value);
+	      {
+		char value_buf[128];
+
+		sprintf_vma (value_buf, isym.n_value);
+		_bfd_error_handler
+		  (_("%pB: stripping non-representable symbol '%s' (value 0x%s)"),
+		   output_bfd, h->root.root.string, value_buf);
+	      }
 	    return true;
 	  }
 #endif
